# pirc

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml  (+1 more)
.swarm/: .gitignore  CLAUDE.md  README.md  SUMMARY.md  config.toml  docker-compose.yml
docker/: dev-pirc.toml
docs/: architecture.md  plugins.md  protocol.md  scripting.md
pirc-client/: Cargo.toml
pirc-client/src/: app.rs  command_parser.rs  config.rs  connection_state.rs  group_chat.rs  main.rs  p2p.rs  p2p_crypto.rs  registration.rs
pirc-client/src/app/: encryption.rs  group.rs  mod.rs  p2p.rs  plugin.rs  tests.rs
pirc-client/src/app/tests/: core.rs  encryption.rs  group_routing.rs  mod.rs  plugin.rs  reconnect.rs
pirc-client/src/client_command/: mod.rs  tests.rs
pirc-client/src/encryption/: mod.rs
pirc-client/src/group_chat/: envelope.rs  mod.rs  tests.rs  types.rs
pirc-client/src/group_chat/tests/: envelope_tests.rs  helpers.rs  manager_tests.rs  messaging_tests.rs  mod.rs  reconnect_tests.rs
pirc-client/src/message_handler/: mod.rs  tests.rs
pirc-client/src/tui/: ansi.rs  buffer.rs  buffer_manager.rs  chat_renderer.rs  input.rs  input_handler.rs  input_history.rs  input_line_state.rs  layout.rs  message_buffer.rs  mirc_colors.rs  mod.rs  renderer.rs  scrollback_search.rs  signal.rs  status_bar.rs  style.rs  tab_bar.rs  tab_completion.rs  terminal.rs  view_coordinator.rs
pirc-client/src/tui/tab_bar/: mod.rs  tests.rs
pirc-common/: Cargo.toml
pirc-common/src/: error.rs  lib.rs
pirc-common/src/config/: mod.rs  paths.rs
pirc-common/src/types/: channel.rs  group.rs  identifiers.rs  mod.rs  mode.rs  nickname.rs
pirc-common/tests/: integration.rs
pirc-crypto/: Cargo.toml
pirc-crypto/benches/: crypto_operations.rs
pirc-crypto/src/: aead.rs  dh_ratchet.rs  error.rs  group_key.rs  header.rs  identity.rs  kdf.rs  kem.rs  key_storage.rs  lib.rs  message.rs  pq_ratchet.rs  prekey.rs  protocol.rs  rotation.rs  signing.rs  symmetric_ratchet.rs  triple_ratchet.rs  x25519.rs  x3dh.rs
pirc-crypto/src/key_storage/: mod.rs  rotation.rs
pirc-crypto/src/triple_ratchet/: mod.rs  tests.rs
pirc-network/: Cargo.toml
pirc-network/benches/: network_codec.rs
pirc-network/src/: backpressure.rs  codec.rs  connection.rs  connector.rs  error.rs  lib.rs  listener.rs  pool.rs  shutdown.rs
pirc-p2p/: Cargo.toml
pirc-p2p/src/: connectivity.rs  encrypted_transport.rs  error.rs  group_mesh.rs  group_session.rs  ice.rs  lib.rs  session.rs  stun.rs  transport.rs
pirc-p2p/src/turn/: client.rs  codec.rs  mod.rs  types.rs
pirc-plugin/: Cargo.toml
pirc-protocol/: Cargo.toml
pirc-protocol/benches/: protocol_parsing.rs
pirc-protocol/fuzz/: Cargo.toml
pirc-protocol/fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_roundtrip.rs  fuzz_structured.rs
pirc-protocol/fuzz/tests/: fuzz_helpers.rs
pirc-protocol/src/: command.rs  error.rs  lib.rs  message.rs  message_tests.rs  numeric.rs  parser.rs  parser_tests.rs  parser_tests_pirc.rs  prefix.rs  version.rs
pirc-protocol/tests/: conformance.rs  conformance_key_exchange.rs
pirc-scripting/: Cargo.toml
pirc-server/: Cargo.toml
pirc-server/benches/: raft_election.rs
pirc-server/src/: ban_invite_tests.rs  channel.rs  channel_mode_query_tests.rs  channel_mode_set_tests.rs  channel_mode_tests.rs  channel_registry.rs  commit_consumer.rs  commit_consumer_tests.rs  config.rs  ctcp_tests.rs  degraded_mode.rs  degraded_mode_tests.rs  failover_queue.rs  failover_queue_tests.rs  graceful_shutdown.rs  group_registry.rs  handler.rs  handler_channel.rs  handler_cluster.rs  handler_cluster_tests.rs  handler_group.rs  handler_group_tests.rs  handler_oper.rs  handler_p2p.rs  handler_relay.rs  handler_tests.rs  join_part_tests.rs  keyexchange_tests.rs  kick_tests.rs  lib.rs  list_names_tests.rs  main.rs  migration.rs  offline_delivery_tests.rs  offline_store.rs  oper_tests.rs  p2p_relay_tests.rs  prekey_store.rs  privmsg_notice_tests.rs  quit_ping_tests.rs  (+5 more)
pirc-server/src/cluster/: invite_key.rs  mod.rs  service.rs  state.rs
pirc-server/src/handler_channel/: ban.rs  invite.rs  join_part.rs  kick.rs  list_names.rs  mod.rs  mode.rs  privmsg.rs  topic.rs  util.rs
pirc-server/src/raft/: cluster_command.rs  driver.rs  driver_tests.rs  election.rs  file_storage.rs  health.rs  log.rs  membership.rs  membership_tests.rs  mod.rs  node.rs  node_snapshot_tests.rs  node_tests.rs  replication.rs  replication_snapshot_tests.rs  replication_tests.rs  rpc.rs  snapshot.rs  state.rs  state_machine.rs  state_machine_tests.rs  storage.rs  test_utils.rs  transport.rs  types.rs
pirc-server/tests/: accept_loop.rs  away_mode.rs  quit_ping.rs  registration.rs  whois.rs
scripts/: build-release.sh  install.sh  release.sh
tests/: Cargo.toml
tests/src/: cluster_harness.rs  lib.rs
tests/src/common/: mod.rs
tests/tests/: channel_management.rs  client_server_flow.rs  connection_lifecycle.rs  perf_validation.rs  protocol_roundtrip.rs  smoke.rs  stress_test.rs  user_messaging.rs
tests/tests/cluster_failover/: degraded_mode.rs  failover.rs  main.rs  membership.rs  state_consistency.rs
tests/tests/encryption_roundtrip/: e2e_server.rs  edge_cases.rs  forward_secrecy.rs  key_exchange.rs  key_storage.rs  main.rs  triple_ratchet.rs
tests/tests/p2p_connectivity/: connectivity.rs  encrypted_transport.rs  ice_gathering.rs  main.rs  session_lifecycle.rs  stun_protocol.rs  turn_protocol.rs
tests/tests/p2p_group_chat/: client_group_chat.rs  group_messaging.rs  main.rs  mesh_formation.rs  peer_join_leave.rs  server_relay_fallback.rs
tests/tests/plugin_system/: config.rs  dispatch.rs  example_plugins.rs  lifecycle.rs  loading.rs  main.rs  registry.rs  sandbox.rs
tests/tests/raft_cluster/: formation.rs  leader_election.rs  log_replication.rs  main.rs  state_machine.rs
tests/tests/scripting_dsl/: aliases.rs  events.rs  host_interaction.rs  loading.rs  main.rs  timers.rs  variables.rs
(+183 files in other folders)
