[workspace]
members = [
    "pirc-common",
    "pirc-protocol",
    "pirc-network",
    "pirc-crypto",
    "pirc-scripting",
    "pirc-plugin",
    "pirc-client",
    "pirc-server",
    "pirc-p2p",
    "examples/plugins/hello-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = []
description = "A modern IRC client and server implementation in Rust"

[workspace.lints.clippy]
# Deny all warnings - treat clippy warnings as errors
all = { level = "deny", priority = -1 }
# Enable pedantic lints as warnings for stricter checking
pedantic = { level = "warn", priority = -1 }
# Allow specific pedantic lints that are too strict or noisy
module-name-repetitions = "allow"
must-use-candidate = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace.lints.rust]
unsafe-code = "deny"
