[package]
name = "pirc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "pirc"
path = "src/main.rs"

[dependencies]
pirc-common = { path = "../pirc-common" }
pirc-protocol = { path = "../pirc-protocol" }
pirc-network = { path = "../pirc-network" }
pirc-crypto = { path = "../pirc-crypto" }
pirc-scripting = { path = "../pirc-scripting" }
pirc-plugin = { path = "../pirc-plugin" }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
