[package]
name = "pirc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "pirc"
path = "src/main.rs"

[dependencies]
pirc-common = { path = "../pirc-common" }
pirc-protocol = { path = "../pirc-protocol" }
pirc-network = { path = "../pirc-network" }
pirc-crypto = { path = "../pirc-crypto" }
pirc-scripting = { path = "../pirc-scripting" }
pirc-plugin = { path = "../pirc-plugin" }
pirc-p2p = { path = "../pirc-p2p" }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
libc = "0.2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
