[package]
name = "pirc-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pirc-common = { path = "../pirc-common" }
pirc-protocol = { path = "../pirc-protocol" }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
