[package]
name = "pirc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "pircd"
path = "src/main.rs"

[dependencies]
pirc-common = { path = "../pirc-common" }
pirc-protocol = { path = "../pirc-protocol" }
pirc-crypto = { path = "../pirc-crypto" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
