[package]
name = "pirc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "pirc_server"
path = "src/lib.rs"

[[bin]]
name = "pircd"
path = "src/main.rs"

[dependencies]
pirc-common = { path = "../pirc-common" }
pirc-protocol = { path = "../pirc-protocol" }
pirc-crypto = { path = "../pirc-crypto" }
pirc-network = { path = "../pirc-network" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
rand = "0.8"
base64 = "0.22"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "raft_election"
harness = false
