[package]
name = "pirc-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pirc-server = { path = "../pirc-server" }
pirc-network = { path = "../pirc-network" }
pirc-protocol = { path = "../pirc-protocol" }
pirc-common = { path = "../pirc-common" }
pirc-crypto = { path = "../pirc-crypto" }
serde = "1"
tokio = { version = "1", features = ["full"] }
