[package]
name = "pirc-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pirc-protocol]
path = ".."

# Fuzz target: parse random byte sequences
[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

# Fuzz target: message serialization round-trip
[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

# Fuzz target: structured near-valid IRC messages
[[bin]]
name = "fuzz_structured"
path = "fuzz_targets/fuzz_structured.rs"
test = false
doc = false
bench = false

# Unit tests for fuzz helper functions
[[test]]
name = "fuzz_helpers"
path = "tests/fuzz_helpers.rs"
